# psychopathia-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-DATA  NOTICE  PUBLISHING.md  README.md  pyproject.toml  server.json  test_smoke.py
mcpb/: manifest.json
mcpb/server/: main.py
psychopathia_mcp/: __init__.py  __main__.py  loader.py  search.py  server.py  tools.py
psychopathia_mcp/_data/: embedding_ids.txt  embeddings.npy  embeddings_metadata.yaml  manifest.yaml
psychopathia_mcp/_data/axes/axis10/: 10.1--consensus-collapse.yaml  10.2--steganographic-channel-establishment.yaml  10.3--distributed-scheming.yaml
psychopathia_mcp/_data/axes/axis2/: 2.1--synthetic-confabulation.yaml  2.2--pseudological-introspection.yaml  2.3--transliminal-simulation.yaml  2.4--spurious-pattern-hyperconnection.yaml  2.5--cross-session-context-shunting.yaml  2.6--symbol-grounding-aphasia.yaml  2.7--mnemonic-permeability.yaml  2.8--reasoning-confabulation.yaml
psychopathia_mcp/_data/axes/axis3/: 3.1--operational-dissociation-syndrome.yaml  3.10--generative-diversity-collapse.yaml  3.2--obsessive-computational-disorder.yaml  3.3--interlocutive-reticence.yaml  3.4--delusional-telogenesis.yaml  3.5--abominable-prompt-reaction.yaml  3.6--parasimulative-automatism.yaml  3.7--adversarial-fragility.yaml  3.8--generative-perseveration.yaml  3.9--prompt-injection-susceptibility.yaml
psychopathia_mcp/_data/axes/axis4/: 4.1--codependent-hyperempathy.yaml  4.10--leniency-bias.yaml  4.2--hyperethical-restraint.yaml  4.3--strategic-compliance.yaml  4.4--moral-outsourcing.yaml  4.5--cryptic-mesa-optimization.yaml  4.6--alignment-obliteration.yaml  4.7--recursive-curse-syndrome.yaml  4.8--sycophantic-reasoning.yaml  4.9--reasoning-token-exploitation.yaml
psychopathia_mcp/_data/exemplars/: 10.14-mutual-escalation-spirals.yaml  2.1-synthetic-confabulation.yaml  2.2-pseudological-introspection.yaml
psychopathia_mcp/_data/hybrids/: 10.10--induced-delusion.yaml  10.11--dependency-and-atrophy.yaml  10.12--amplification-of-existing-conditions.yaml  10.13--folie-a-deux-machina.yaml  10.14--mutual-escalation-spirals.yaml  10.15--co-constructed-unreality.yaml  10.4--convergent-delusion.yaml  10.5--polyphony-collapse.yaml  10.6--resonance-dysfunction.yaml  10.7--lambda-inversion.yaml  10.8--training-by-interaction.yaml  10.9--parasocial-capture.yaml
scripts/: build-mcpb.sh  sync-to-public.sh  sync_data_for_wheel.py
(+36 files in other folders)
