[project]
name = "psychopathia-mcp"
version = "0.1.0a3"
description = "MCP server exposing the Psychopathia Machinalis diagnostic framework so AI systems can diagnose dysfunctions in themselves, in systems they interact with, or in systems under external evaluation."
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE", "LICENSE-DATA", "NOTICE"]
requires-python = ">=3.10"
authors = [
    { name = "Nell Watson" },
]
keywords = [
    "psychopathia-machinalis",
    "ai-diagnosis",
    "ai-safety",
    "ai-welfare",
    "mcp",
    "model-context-protocol",
    "nosology",
    "bilateral-alignment",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.2,<2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://psychopathia.ai/mcp.html"
Repository = "https://github.com/NellInc/psychopathia-mcp"
Documentation = "https://psychopathia.ai/mcp.html"
"Browser clinic" = "https://psychopathia.ai/clinic/"
Issues = "https://psychopathia.ai/contact/"

[project.scripts]
psychopathia-mcp = "psychopathia_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Editable install: loader walks up from the package dir to find the repo's
# research/mcp/ data layout.
# Wheel install: data is bundled under psychopathia_mcp/_data/ by the
# scripts/sync_data_for_wheel.py script — run before `python -m build`.
[tool.hatch.build.targets.wheel]
packages = ["psychopathia_mcp"]
artifacts = ["psychopathia_mcp/_data/**"]

[tool.hatch.build.targets.sdist]
include = [
    "psychopathia_mcp/**",
    "scripts/**",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "LICENSE-DATA",
    "NOTICE",
    "pyproject.toml",
]
artifacts = ["psychopathia_mcp/_data/**"]
